<?xml version="1.0" encoding="utf-8"?>
<CheckBox
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_espresso"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Espresso"
    android:textAppearance="@android:style/TextAppearance.Medium"/>